--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,16 @@
     }
   ],
   "type": "wordpress-plugin",
+  "autoload-dev": {
+    "classmap": [
+      "tests/TestCase.php"
+    ]
+  },
   "require": {
     "php": ">=5.3.2",
     "composer/installers": "~1.0.12"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "*"
   }
 }
