--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 # ignore composer.lock
 composer.lock
 
-src/plugins/*
-!src/plugins/acf-address
+src/app/plugins/*
+!src/app/plugins/acf-address
 
 src/wp/*
 !src/wp/.gitkeep
