--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     {
       "type": "composer",
       "url": "http://wpackagist.org"
+    },
+    {
+      "type": "git",
+      "url": "git@bitbucket.org:simadmin/acf-plugin-mirror.git"
     }
   ],
   "autoload-dev": {
@@ -28,6 +32,7 @@
     "composer/installers": "~1.0.12"
   },
   "require-dev": {
+    "simadmin/acf-mirror": "5.*",
     "johnpbloch/wordpress": "4.4.1",
     "vlucas/phpdotenv": "^2.0.1",
     "phpunit/phpunit": "*",
@@ -35,7 +40,7 @@
   },
   "extra": {
     "installer-paths": {
-      "src/plugins/{$name}/": ["type:wordpress-plugin"],
+      "src/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
     "wordpress-install-dir": "src/wp"
