--- a/package.json
+++ b/package.json
@@ -13,6 +13,44 @@
     "jquery": "^2.1.4"
   },
   "devDependencies": {
+    "autoprefixer-core": "^6.0.1",
+    "babel-core": "^6.3.17",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^1.1.0",
+    "babel-plugin-transform-react-jsx": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "chalk": "^1.1.1",
+    "css-loader": "^0.23.0",
+    "del": "^2.2.0",
+    "dotenv": "^2.0.0",
+    "eslint": "^1.10.3",
+    "eslint-config-rackt": "^1.1.1",
+    "eslint-loader": "^1.2.0",
+    "eslint-plugin-react": "^3.15.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "gulp": "^3.9.0",
+    "gulp-db": "0.0.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-mysql-command-file-processor": "https://github.com/strickdj/gulp-mysql-command-file-processor/tarball/master",
+    "gulp-sync": "^0.1.4",
+    "gulp-util": "^3.0.7",
+    "json-loader": "^0.5.4",
+    "mysql": "^2.10.2",
+    "mysqldump": "^1.0.2",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "raw-loader": "^0.5.1",
+    "react-transform-hmr": "^1.0.0",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.12.3",
+    "stylelint": "^3.2.3",
+    "stylelint-config-suitcss": "^3.0.0",
+    "stylelint-loader": "^0.1.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.9.11",
+    "webpack-manifest-plugin": "^0.5.0"
   },
   "scripts": {
   }
