--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
   },
   "require": {
     "php": ">=5.3.2",
-    "composer/installers": "~1.0.12"
+    "composer/installers": "~1.0.12",
+    "codeception/codeception": "*"
   },
   "require-dev": {
     "simadmin/acf-mirror": "5.*",
