--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
   },
   "require": {
     "php": ">=5.3.2",
-    "composer/installers": "~1.0.12",
-    "codeception/codeception": "*"
+    "composer/installers": "~1.0.12"
   },
   "require-dev": {
+    "codeception/codeception": "*",
     "simadmin/acf-mirror": "5.*",
     "johnpbloch/wordpress": "4.4.1",
     "vlucas/phpdotenv": "^2.0.1",
