--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,17 @@
     "johnpbloch/wordpress": "4.4.1",
     "vlucas/phpdotenv": "^2.0.1",
     "phpunit/phpunit": "*",
-    "symfony/debug": "^3.0"
+    "symfony/debug": "^3.0",
+    "site5/phantoman": "^1.0",
+    "jakoch/phantomjs-installer": "^2.1"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "PhantomInstaller\\Installer::installPhantomJS"
+    ],
+    "post-update-cmd": [
+      "PhantomInstaller\\Installer::installPhantomJS"
+    ]
   },
   "extra": {
     "installer-paths": {
