added test, save session not working for some reason...

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   },
   "require-dev": {
     "codeception/codeception": "*",
-    "simadmin/acf-mirror": "5.*",
+    "simadmin/acf-mirror": "5.3.4",
     "johnpbloch/wordpress": "4.4.1",
     "vlucas/phpdotenv": "^2.0.1",
     "phpunit/phpunit": "*",
