added test theme

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # ignore composer.lock
 composer.lock
 
+src/app/themes/*
+!src/app/themes/.gitkeep
 src/app/plugins/*
 !src/app/plugins/acf-address
 
